[tool.poetry]
name = "monster"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
